--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,7 @@ spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=30
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
+
+# OpenAI Service
+#openai.api.url=
+#openai.api.key=
